--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,13 @@
     <meta charset="utf-8">
     <title>The Love Connection</title>
     <link rel="stylesheet" href="master.css">
+    <link rel="stylesheet" href="https://unpkg.com/@material-ui/core@latest/umd/material-ui.development.js">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
   </head>
   <body>
-      <h1>The Love Connection</h1>
+      <!-- <h1>The Love Connection</h1> -->
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcS02tZqaDktBs33NZYRHYgzY0L_ectZ9AkeRw&usqp=CAU" alt="">
       <main>
         <!-- this is where we will load our react -->
       </main>
@@ -16,5 +20,6 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
     <script type="text/babel" src="js/app.js"></script>
+    <!-- <script type="text/javascript" src="js/materialize.min.js"></script> -->
   </body>
 </html>
