--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <title>The Love Connection</title>
     <link rel="stylesheet" href="master.css">
-  
+    <link href="https://fonts.googleapis.com/css2?family=Atomic+Age&display=swap" rel="stylesheet">
+
 
   </head>
   <body>
